# Font-Nest

./: .editorconfig  .env.example  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  NOTICE  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
.impeccable/: design.json
docs/: DESIGN.md  LOGO-EXPLORATION-PROMPT.md  PRODUCT.md  RELEASING.md  Todos.md  brand-lab.html
scripts/: refresh-google-fonts.mjs
src/: app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: google-fonts.json
src-tauri/src/: catalogue.rs  commands.rs  dto.rs  font_inspection.rs  font_origin.rs  font_platform.rs  font_variations.rs  google_fonts.rs  lib.rs  local_fonts.rs  main.rs  managed_installations.rs  release_notes.rs
src/lib/: app-updater.spec.ts  app-updater.ts  conflict-navigation.spec.ts  conflict-navigation.ts  font-preview-accessibility.spec.ts  glyph-categories.spec.ts  glyph-categories.ts  reorder.spec.ts  reorder.ts  sticky-surface.spec.ts  sticky-surface.ts  tauri-config.spec.ts
src/lib/a11y/: contrast.spec.ts  contrast.ts
src/lib/bindings/: AppUpdateEvent.ts  AppUpdateInfo.ts  FontCatalogue.ts  FontEmbeddingProperties.ts  FontFaceInspection.ts  FontFaceMetrics.ts  FontFaceNames.ts  FontFaceProperties.ts  FontFaceSummary.ts  FontFamilySummary.ts  FontGlyphBounds.ts  FontGlyphOutline.ts  FontGlyphOutlineHandle.ts  FontGlyphOutlinePoint.ts  FontGlyphOutlineRequest.ts  FontGlyphVariationValue.ts  FontOrigin.ts  FontParserJsonExport.ts  FontVariationAxis.ts  GoogleFontArtifactSummary.ts  GoogleFontFamilyDetails.ts  GoogleFontFamilySummary.ts  GoogleFontInstallResult.ts  GoogleFontPage.ts  GoogleFontPageRequest.ts  GoogleFontPreview.ts  Greeting.ts  InstallGoogleFontRequest.ts  LocalFontFaceSummary.ts  ValidatedLocalFont.ts
src/lib/catalogue/: browser-catalogue.ts
src/lib/components/: AppNavigation.svelte  AppTitleBar.svelte  ConflictsView.svelte  ContextMenu.svelte  DiscoverFilterMenu.svelte  DiscoverView.svelte  FilterPopover.svelte  FontInspector.svelte  Icon.svelte  (+5 more)
src/routes/: +layout.svelte  +page.svelte  layout.css
static/: theme-init.js
(+26 files in other folders)
