[package]
name = "fontnest"
version = "0.1.0"
description = "A lightweight desktop font manager"
authors = ["FontNest contributors"]
license = "Apache-2.0"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fontnest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
base64 = "0.22.1"
fontdb = "0.23.0"
futures-util = "0.3.31"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "stream"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha1 = "0.11.0"
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
ttf-parser = "0.25.1"
thiserror = "2.0.18"
ts-rs = { version = "12", features = ["serde-compat"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.56.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3.23.0"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
